--- a/react-router-demo02/package.json
+++ b/react-router-demo02/package.json
@@ -5,11 +5,15 @@
   "dependencies": {
     "antd": "^3.22.0",
     "axios": "^0.19.0",
+    "filepond": "^4.5.0",
+    "filepond-plugin-image-exif-orientation": "^1.0.6",
+    "filepond-plugin-image-preview": "^4.4.0",
     "less": "^3.10.1",
     "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-filepond": "^7.0.1",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
