--- a/react-router-demo02/package.json
+++ b/react-router-demo02/package.json
@@ -6,6 +6,9 @@
     "antd": "^3.22.0",
     "axios": "^0.19.0",
     "filepond": "^4.5.0",
+    "filepond-plugin-file-rename": "^1.1.4",
+    "filepond-plugin-file-validate-size": "^2.2.0",
+    "filepond-plugin-file-validate-type": "^1.2.4",
     "filepond-plugin-image-exif-orientation": "^1.0.6",
     "filepond-plugin-image-preview": "^4.4.0",
     "less": "^3.10.1",
