--- a/react-router-demo02/package.json
+++ b/react-router-demo02/package.json
@@ -14,6 +14,7 @@
     "less": "^3.10.1",
     "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
+    "query-string": "^6.8.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-filepond": "^7.0.1",
