--- a/react-router-demo02/package.json
+++ b/react-router-demo02/package.json
@@ -20,6 +20,7 @@
     "react-filepond": "^7.0.1",
     "react-redux": "^7.1.0",
     "react-router-breadcrumbs-hoc": "^3.2.2",
+    "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
