--- a/react-router-demo02/package.json
+++ b/react-router-demo02/package.json
@@ -23,6 +23,7 @@
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-transition-group": "^4.2.2",
     "redux": "^4.0.4",
     "redux-saga": "^1.0.5",
     "shortid": "^2.2.14"
